test-cases/final-dump/trait_error_abstract_proc_missing.exp
Error detected during type checking of module(s) trait_error_abstract_proc_missing, trait_error_abstract_proc_missing.printable
final-dump/trait_error_abstract_proc_missing.wybe:9:1: Invalid implementation of trait trait_error_abstract_proc_missing.printable for type wybe.int: missing required proc print_value
